# MLOPS

./: .gitignore  README.md  TEAM.md  data_preparation.py  dvc.yaml  mlflow.db  params.yaml  pyproject.toml  train_models.py
.dvc/: .gitignore
data/: Contruir_DataSet.py
data/raw/: open_rate_dataset.csv  open_rate_dataset.csv.dvc  session_data.csv
mlruns/1/models/m-0b8615bd91644aa6ab3867dd7b6904f7/artifacts/: MLmodel  python_env.yaml
mlruns/1/models/m-3452855b9c3a41d69a9d5d2c6df513ce/artifacts/: MLmodel  conda.yaml
mlruns/1/models/m-3d4a7b56154c4dbaae1664bf69212f22/artifacts/: MLmodel  model.skops
mlruns/1/models/m-7733b2d292f54874a0a5f85083750a92/artifacts/: MLmodel
mlruns/1/models/m-778fe7577e194276806bb4c018439aa5/artifacts/: MLmodel  model.skops
mlruns/1/models/m-a0c32fa02424459ea3fa04739bd8b6d5/artifacts/: MLmodel
mlruns/1/models/m-b2ebcd902f264b67ad4b7a5e9475f336/artifacts/: MLmodel  model.skops
mlruns/1/models/m-e1aa3072bb0d4012813e34306a50fe7f/artifacts/: MLmodel  conda.yaml  model.skops
src/: generate_data.PY  generate_data_OLD.py  train_models.py
