[project]
name = "mlops"
version = "0.1.0"
description = ""
authors = [
    {name = "John Cruz",email = "jfcruz.ibp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>2.3.0,<3.0)",
    "dvc (>=3.67.1,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "mlflow (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
